Updated the About and Contact page to prevent flashing when navigating to page. Updated the App.tsx to wrap the app in the Animated Presence to help with the flashing added the background to the body as well.

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,4 @@
 @import "tailwindcss";
+
+body {
+    @apply bg-gradient-to-b from-slate-900 via-slate-800 to-slate-900 text-white; }
